# Veritrace

./: .env.example  .gitignore  .test_1780133855.txt  .test_1780133878.txt  .testout.txt  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pramagent_enterprise_audit.md  pramagent_full_audit.md  pramagent_security_test_results.md  pyproject.toml  test_agent.py  test_agent_v2.py
.github/workflows/: publish.yml  security.yml  tests.yml
deploy/: __init__.py
deploy/dashboard/: Dockerfile  __init__.py  app.py
deploy/dashboard/templates/: approvals.html  base.html  forgot_password.html  key_issued.html  login.html  metrics.html  metrics_fragment.html  overview.html  reset_password.html  signup.html  trace_detail.html  traces.html  usage.html
deploy/helm/pramagent/: Chart.yaml  values.yaml
deploy/helm/pramagent/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
deploy/helm/veritrace/: Chart.yaml  values.yaml
deploy/helm/veritrace/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
deploy/postgres/: init.sql
docs/: COMPLIANCE_MAPPING.md  DEMO_SCRIPT.md  DEPLOYMENT.md  HARDENING_GUIDE.md  IMPLEMENTATION_STATUS.md  LIVE_TEST_RESULTS.md  LIVE_WORKFLOW_DEMO.md  LOAD_TEST.md  LOAD_TEST_RESULTS.md  Pramagent-Design-Document.docx  REDTEAM_RESULTS.md  RELEASE.md  SECURITY_AUDIT_PROMPT.md  SECURITY_SCAN_REPORT_2026-06-07.md  TECHNICAL_MARKETING_POST.md  Veritrace-Design-Document.docx
examples/: demo.py  dynamic_feed_agent.py  live_payment_agent.py
pramagent/: __init__.py  _pg.py  auth.py  classifier.py  cli.py  compliance.py  config.py  core.py  dashboard_auth.py  errors.py  otel.py  ratelimit.py  rca.py  redteam.py  security.py  store.py  store_encrypted.py  store_postgres.py  store_s3.py  telemetry.py  types.py  usage.py
pramagent/adapters/: __init__.py  autogen.py  crewai.py  generic.py  langgraph.py
pramagent/anchoring/: ethereum.py
pramagent/api/: __init__.py  app.py
pramagent/audit/: __init__.py
pramagent/backends/: __init__.py  migrations.py  redis_backend.py
pramagent/hitl/: __init__.py  adapters.py  slack.py  workflow.py
pramagent/layers/: __init__.py  isolation.py  llm_judge.py  observability.py  tool_guard.py
pramagent/providers/: __init__.py
pramagent/queue/: __init__.py  base.py  postgres.py  sqlite.py
pramagent/rules/: __init__.py  fictional_wrapper.py  financial.py  injection.py  jailbreak.py  owasp_llm.py  phi.py
tests/: conftest.py  test_adapters.py  test_adversarial.py  test_adversarial_extra.py  test_anchoring.py  test_api.py  test_auth.py  test_classifier.py  test_compliance.py  test_compliance_reports.py  test_dashboard_security.py  test_encryption.py  test_ethereum_anchor.py  test_fallback_provider.py  test_hitl_workflow.py  test_isolation.py  test_load_smoke.py  test_migrations.py  test_new_modules.py  test_otel.py  test_persistence.py  test_pipeline.py  test_postgres_store.py  test_providers.py  test_ratelimit.py  test_rca_graph.py  test_redteam.py  test_retention.py  test_rules_and_extensions.py  test_security_helpers.py  test_slack_hitl.py  test_store_s3.py  test_syntax_health.py  test_tool_guard.py  test_usage.py
veritrace/: __init__.py  auth.py  classifier.py  cli.py  compliance.py  config.py  core.py  errors.py  otel.py  ratelimit.py  rca.py  redteam.py  store.py  store_encrypted.py  store_postgres.py  store_s3.py  telemetry.py  types.py  usage.py
veritrace/anchoring/: __init__.py  ethereum.py
veritrace/api/: __init__.py  app.py
veritrace/audit/: __init__.py
veritrace/backends/: __init__.py  migrations.py  redis_backend.py
veritrace/hitl/: __init__.py  adapters.py  slack.py  workflow.py
veritrace/layers/: __init__.py  isolation.py  llm_judge.py  observability.py  tool_guard.py
veritrace/providers/: __init__.py
