[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritrace"
version = "0.2.0"
description = "Agent trust middleware: audit trails, safety guardrails, HITL, and tool validation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sriram Rampelli" }]
keywords = ["ai", "agents", "llm", "safety", "audit", "compliance", "trust", "guardrails"]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
ollama = ["aiohttp>=3.9"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
encrypted = ["cryptography>=42"]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
redis = ["redis>=5.0"]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "cryptography>=42"]

[tool.setuptools.packages.find]
include = ["veritrace*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
veritrace = "veritrace.cli:main"
