[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pramagent"
version = "0.7.3"
description = "Alpha agent trust middleware: audit trails, safety guardrails, HITL, and tool validation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Sriram Rampelli" }]
keywords = ["ai", "agents", "llm", "safety", "audit", "compliance", "trust", "guardrails"]
dependencies = ["jsonschema>=4.23"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sriram7737/pramagent"
Repository = "https://github.com/sriram7737/pramagent"
Issues = "https://github.com/sriram7737/pramagent/issues"
Documentation = "https://github.com/sriram7737/pramagent#readme"
Author = "https://sriram7737.github.io"

# Floors exclude published advisories:
#   python-multipart >= 0.0.27 (multipart parser advisories)
#   aiohttp          >= 3.14.0 (request smuggling / parser advisories)
# Upper caps on fast-moving majors (fastapi, web3) prevent silent breaking
# resolutions. psycopg[binary] v3 replaces psycopg2-binary, which its
# maintainers do not recommend for production.
[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
ollama = ["aiohttp>=3.14.0"]
api = ["fastapi>=0.110,<1.0", "uvicorn>=0.29"]
dashboard = ["fastapi>=0.110,<1.0", "uvicorn>=0.29", "jinja2>=3.1", "python-multipart>=0.0.27", "httpx>=0.27", "bcrypt>=4.1"]
encrypted = ["cryptography>=42"]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
redis = ["redis>=5.0"]
postgres = ["psycopg[binary]>=3.1"]
ethereum = ["web3>=7.0,<8"]
s3 = ["boto3>=1.34", "cryptography>=42"]
# Embedding-based injection classifier (EmbeddingInjectionClassifier).
# Heavy (pulls torch) — deliberately NOT part of `all`. Without it the
# classifier falls back to keyword matching.
ml = ["sentence-transformers>=3.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "cryptography>=42", "jinja2>=3.1", "python-multipart>=0.0.27", "bcrypt>=4.1"]
all = [
    "jsonschema>=4.23",
    "anthropic>=0.39",
    "aiohttp>=3.14.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.27",
    "httpx>=0.27",
    "bcrypt>=4.1",
    "cryptography>=42",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "web3>=7.0,<8",
    "boto3>=1.34",
]

[tool.setuptools.packages.find]
include = ["pramagent*", "deploy*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"deploy.dashboard" = ["templates/*.html"]

[tool.setuptools.data-files]
"share/pramagent" = ["README.md", "CHANGELOG.md", "pramagent_full_audit.md", "pramagent_security_test_results.md"]
"share/pramagent/docs" = [
    "docs/IMPLEMENTATION_STATUS.md",
    "docs/HARDENING_GUIDE.md",
    "docs/LIVE_TEST_RESULTS.md",
    "docs/REDTEAM_RESULTS.md",
    "docs/LOAD_TEST_RESULTS.md",
    "docs/LOAD_TEST.md",
    "docs/DEPLOYMENT.md",
    "docs/COMPLIANCE_MAPPING.md",
    "docs/RELEASE.md",
    "docs/DEMO_SCRIPT.md",
    "docs/LIVE_WORKFLOW_DEMO.md",
    "docs/SECURITY_AUDIT_PROMPT.md",
    "docs/TECHNICAL_MARKETING_POST.md",
    "docs/SECURITY_SCAN_REPORT_2026-06-07.md",
    "docs/quickstart-terminal.png",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
pramagent = "pramagent.cli:main"
